<resources>
    <string name="app_name">Geo Quiz</string>
    <string name="button_false">نادرست</string>
    <string name="button_true">درست</string>
    <string name="button_previous">قبلي</string>
    <string name="button_next">بعدي</string>
    <string name="toast_correct">جواب شما صحيح است.</string>
    <string name="toast_incorrect">متاسفانه جواب صحيحي نيست</string>
    <string name="toast_judgment">ـتقلب كار خوبی نیست</string>

 <!--   <string name="question_australia">استرالیا بزرگ ترین قاره جهان است.</string>
    <string name="question_oceans">اقیانوس آرام بزرگ ترین اقیانوس جهان است.</string>
    <string name="question_mideast">همه کشورهای خاورمیانه عرب زبان هستند.</string>
    <string name="question_africa">مصر در قاره آفریقا قرار دارد.</string>
    <string name="question_americas">کشور آمریکا پرجمعیت ترین کشور دنیا است.</string>
    <string name="question_asia">قاره آسیا در نیم کره جنوبی جهان واقع شده است.</string>-->
    <string name="button_cheat">تقلب</string>
    <string name="cheat_warning">آیا برای تقلب مطمئن هستید؟</string>
    <string name="button_back">بازگشت</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>