<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".controller.fragment.CheatFrag">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/cheat_warning"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/text_view_show_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        tools:text="درست" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:textAllCaps="false"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button_show_cheat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cheat"
        android:textAllCaps="false"
        android:textSize="22sp" />

</LinearLayout>
