<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_frag_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager_question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/button_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/button_false"
                android:textAllCaps="false"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/button_true"
                android:textAllCaps="false"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/button_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_arrow_left"
                android:padding="12dp"
                android:text="@string/button_previous"
                android:textAllCaps="false"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_arrow_right"
                android:padding="12dp"
                android:text="@string/button_next"
                android:textAllCaps="false"
                android:textSize="22sp" />

        </LinearLayout>

        <Button
            android:id="@+id/button_cheat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="12dp"
            android:text="@string/button_cheat"
            android:textAllCaps="false"
            android:textSize="22sp" />
    </LinearLayout>
</LinearLayout>

